# Calculator-cpp

./: CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
Calculator-cpp/: CMakeLists.txt
Calculator-cpp/include/: parser.h
Calculator-cpp/src/: calculator.cpp  main.cpp  server.cpp
Calculator-cpp/tests/: test_calculator.cpp
cli/: main.cpp
gui/: graphwindow.cpp  graphwindow.h  main.cpp  mainwindow.cpp  mainwindow.h
include/: calc_worker.h  calculator.h  history.h  history_writer.h  thread_safe_queue.h
src/: calculator.cpp  history.cpp  history_writer.cpp  parser.cpp
tests/: test_calculator.cpp
